--- a/st-society-oita/src/css/index.css
+++ b/st-society-oita/src/css/index.css
@@ -9,3 +9,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* スクロールバーのベース */
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+/* スクロールバーの動かすやつ */
+::-webkit-scrollbar-thumb {
+  background-color: #e86000;
+  border-radius: 100px;
+}
+.anchor {
+  display: block;
+  padding-top: 70px;
+  margin-top: -70px;
+}
